--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,65 @@
+# Environment variables
+.env
 **/.env
-**/.venv
-**/.vscode
-**/.idea
-**/.pytest_cache
-**/.pytest_cache
-**/.pytest_cache
-**/__pycache__
-**/db.sqlite3
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+.venv/
+**/.venv/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
+static/
+
+# IDE & Editors
+.idea/
+.vscode/
+**/.idea/
+**/.vscode/
+*.swp
+*.swo
+*~
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+
+# Frontend
+**/node_modules/
+**/build/
+**/dist/
+**/coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
