--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,72 +72,53 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TOKEN }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       
-      # Verify required secrets are available
-      - name: Check Required Secrets
+      # Check if required secrets are available
+      - name: Check deployment prerequisites
+        id: check_deployment
         run: |
-          missing_secrets=()
+          missing=()
+          [[ -z "$DOCKER_USERNAME" ]] && missing+=("DOCKER_HUB_USERNAME")
+          [[ -z "$DOCKER_PASSWORD" ]] && missing+=("DOCKER_HUB_TOKEN")
+          [[ -z "${{ secrets.SERVER_HOST }}" ]] && missing+=("SERVER_HOST")
+          [[ -z "${{ secrets.SERVER_USERNAME }}" ]] && missing+=("SERVER_USERNAME")
+          [[ -z "${{ secrets.SERVER_SSH_KEY }}" ]] && missing+=("SERVER_SSH_KEY")
           
-          # Docker Hub secrets
-          [ -z "${{ secrets.DOCKER_HUB_USERNAME }}" ] && missing_secrets+=("DOCKER_HUB_USERNAME")
-          [ -z "${{ secrets.DOCKER_HUB_TOKEN }}" ] && missing_secrets+=("DOCKER_HUB_TOKEN")
-          
-          # Server deployment secrets
-          [ -z "${{ secrets.SERVER_HOST }}" ] && missing_secrets+=("SERVER_HOST")
-          [ -z "${{ secrets.SERVER_USERNAME }}" ] && missing_secrets+=("SERVER_USERNAME")
-          [ -z "${{ secrets.SERVER_SSH_KEY }}" ] && missing_secrets+=("SERVER_SSH_KEY")
-          
-          # Django secrets
-          [ -z "${{ secrets.DJANGO_SECRET_KEY }}" ] && missing_secrets+=("DJANGO_SECRET_KEY")
-          
-          if [ ${#missing_secrets[@]} -ne 0 ]; then
-            echo "::error::Missing required secrets: ${missing_secrets[*]}"
-            echo "Please add these secrets to your GitHub repository settings."
-            exit 1
+          if [[ ${#missing[@]} -gt 0 ]]; then
+            echo "::warning::Missing secrets: ${missing[*]}"
+            echo "can_deploy=false" >> $GITHUB_OUTPUT
+            exit 0
           fi
           
-          echo "All required secrets are available."
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
+          echo "can_deploy=true" >> $GITHUB_OUTPUT
+          
+      # Login to Docker Hub
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        if: steps.check_deployment.outputs.can_deploy == 'true'
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-        env:
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Check Docker Hub Credentials
-        run: |
-          if [ -z "${{ secrets.DOCKER_HUB_USERNAME }}" ] || [ -z "${{ secrets.DOCKER_HUB_TOKEN }}" ]; then
-            echo "::error::Docker Hub credentials are missing. Please add DOCKER_HUB_USERNAME and DOCKER_HUB_TOKEN to your GitHub repository secrets."
-            exit 1
-          fi
-          
-      - name: Build and push backend image
-        uses: docker/build-push-action@v4
+      # Build and push Docker image
+      - name: Build and push Docker image
+        if: steps.check_deployment.outputs.can_deploy == 'true'
+        uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/prompt-manager-backend:latest
-          
-      # Optional: Build frontend when it's ready
-      # - name: Build and push frontend image
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     context: ./frontend
-      #     push: true
-      #     tags: ${{ secrets.DOCKER_HUB_USERNAME }}/prompt-manager-frontend:latest
-      
-      # Deploy to your server using SSH
+
+      # Deploy to server
       - name: Deploy to server
+        if: steps.check_deployment.outputs.can_deploy == 'true'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -149,22 +130,23 @@ jobs:
             wget -O docker-compose.yml https://raw.githubusercontent.com/${{ github.repository }}/main/docker-compose.yml
             
             # Create the .env file from secrets
+            mkdir -p backend
             cat > backend/.env << EOL
             # Django environment variables
-            SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
-            DEBUG=${{ secrets.DEBUG }}
+            SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY || 'django-insecure-default-key-do-not-use-in-production' }}
+            DEBUG=${{ secrets.DEBUG || 'False' }}
             
             # Database settings
-            POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+            POSTGRES_DB=${{ secrets.POSTGRES_DB || 'prompt_db' }}
+            POSTGRES_USER=${{ secrets.POSTGRES_USER || 'postgres' }}
+            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD || 'postgres' }}
             POSTGRES_HOST=db
             POSTGRES_PORT=5432
             
             # Superuser credentials
-            DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
-            DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}
-            DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
+            DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME || 'admin' }}
+            DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL || 'admin@example.com' }}
+            DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD || 'admin_password' }}
             EOL
             
             # Pull the latest images and restart the containers
