--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,9 @@ jobs:
       postgres:
         image: postgres:15-alpine
         env:
-          POSTGRES_USER: ${{ secrets.TEST_DB_USER || 'postgres' }}
-          POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD || 'postgres' }}
-          POSTGRES_DB: ${{ secrets.TEST_DB_NAME || 'test_db' }}
+          POSTGRES_USER: ${{ secrets.TEST_DB_USER != '' && secrets.TEST_DB_USER || 'postgres' }}
+          POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD != '' && secrets.TEST_DB_PASSWORD || 'postgres' }}
+          POSTGRES_DB: ${{ secrets.TEST_DB_NAME != '' && secrets.TEST_DB_NAME || 'test_db' }}
         ports:
           - 5432:5432
         options: >-
@@ -46,11 +46,11 @@ jobs:
       - name: Set up test environment
         run: |
           cd backend
-          echo "SECRET_KEY='${{ secrets.TEST_SECRET_KEY || 'django-test-key-ci-only' }}'" > .env
+          echo "SECRET_KEY='${{ secrets.TEST_SECRET_KEY != '' && secrets.TEST_SECRET_KEY || 'django-test-key-ci-only' }}'" > .env
           echo "DEBUG=False" >> .env
-          echo "POSTGRES_DB=${{ secrets.TEST_DB_NAME || 'test_db' }}" >> .env
-          echo "POSTGRES_USER=${{ secrets.TEST_DB_USER || 'postgres' }}" >> .env
-          echo "POSTGRES_PASSWORD=${{ secrets.TEST_DB_PASSWORD || 'postgres' }}" >> .env
+          echo "POSTGRES_DB=${{ secrets.TEST_DB_NAME != '' && secrets.TEST_DB_NAME || 'test_db' }}" >> .env
+          echo "POSTGRES_USER=${{ secrets.TEST_DB_USER != '' && secrets.TEST_DB_USER || 'postgres' }}" >> .env
+          echo "POSTGRES_PASSWORD=${{ secrets.TEST_DB_PASSWORD != '' && secrets.TEST_DB_PASSWORD || 'postgres' }}" >> .env
           echo "POSTGRES_HOST=localhost" >> .env
           echo "POSTGRES_PORT=5432" >> .env
           echo "CI=True" >> .env
