--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   # Backend service
   backend:
-    image: ${DOCKER_HUB_USERNAME:aminseifi}$/prompt-manager-backend:latest
+    image: ${DOCKER_HUB_USERNAME:-aminseifi}/prompt-manager-backend:latest
     container_name: prompt-manager-backend
     volumes:
       - ./backend/staticfiles:/app/staticfiles
@@ -38,7 +38,7 @@ services:
       - prompt-network
 
   # frontend:
-  #   image: ${DOCKER_HUB_USERNAME:aminseifi}$/prompt-manager-frontend:latest
+  #   image: ${DOCKER_HUB_USERNAME:-aminseifi}/prompt-manager-frontend:latest
   #   container_name: prompt-manager-frontend
   #   ports:
   #     - "3000:3000"
