--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -32,8 +32,11 @@ RUN echo 'FallbackResource /index.html' > /usr/local/apache2/htdocs/.htaccess
 RUN sed -i '/LoadModule rewrite_module/s/^#//g' /usr/local/apache2/conf/httpd.conf && \
     sed -i 's/AllowOverride None/AllowOverride All/g' /usr/local/apache2/conf/httpd.conf
 
-# Expose port 80
+# Expose port 80 - Note: This is only documentation; the actual port mapping is done in docker-compose.yml
 EXPOSE 80
+
+# Document that we're mapping to 8001 externally
+LABEL com.prompt-manager.port-mapping="8001:80"
 
 # Start Apache
 CMD ["httpd-foreground"] 
