--- a/.github/workflows/unified-deploy.yml
+++ b/.github/workflows/unified-deploy.yml
@@ -88,7 +88,7 @@ jobs:
       
       - name: Build
         working-directory: ./frontend
-        run: npm run build
+        run: CI=false npm run build
       
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
