--- a/.github/workflows/unified-deploy.yml
+++ b/.github/workflows/unified-deploy.yml
@@ -88,7 +88,7 @@ jobs:
       
       - name: Build
         working-directory: ./frontend
-        run: CI=false npm run build
+        run: CI=false REACT_APP_API_URL=https://prompt-back.aminseifi.com/api REACT_APP_ENVIRONMENT=production REACT_APP_USE_MOCK_DATA=false npm run build
       
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
