--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - backend
     environment:
       - REACT_APP_API_URL=https://prompt-back.aminseifi.com/api
+      - REACT_APP_PRODUCTION_API_URL=https://prompt-back.aminseifi.com/api
       - REACT_APP_ENVIRONMENT=production
       - REACT_APP_USE_MOCK_DATA=false
     restart: unless-stopped
