--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django==5.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.5.0
+django-filter==25.1
 django-cors-headers==4.3.1
 psycopg2-binary==2.9.9
 drf-yasg==1.21.7
